--- a/css/style.css
+++ b/css/style.css
@@ -310,6 +310,9 @@ body{
 }
 
 @media(max-height: 500px){
+	.header__body{
+		padding: 100px 0 0 0;
+	}
 	.header__slider .slick-dots{
 		padding: 20px 0 0 0;
 	}
